# dense_image_aligment

./: .gitignore  .pre-commit-config.yaml  AffineExample.ipynb  Draft.ipynb  DraftRT.ipynb  DraftReprojection.ipynb  ExampleAffine.ipynb  README.md  ReprojectionExample.ipynb  Translation.ipynb  TranslationExample.ipynb  draft.py  draft_reprojection.py  pyproject.toml
dense_image_aligment/: __init__.py  camera_utils.py  dense.py  read_write.py  utils.py
dense_image_aligment/dataset_utils/: hilti.py
dense_image_aligment/transformations/: __init__.py  affine.py  base_transformation.py  basic_transformation.py  coords_utils.py  differential_utils.py  homography.py  reprojection.py  translation.py
notebooks/: AffineExample.ipynb  AffineExample7Scenes.ipynb  HomographyExample.ipynb  ReprojectionExample.ipynb  TranslationExample.ipynb  example.ipynb  noise.ipynb
